fix: Overflow

--- a/src/assets/markdown.css
+++ b/src/assets/markdown.css
@@ -62,6 +62,10 @@ table {
   border-collapse: collapse;
   width: 100%;
   border-radius: 6px;
+  display: block;
+  max-width: 100vw;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 th,
